--- a/style.css
+++ b/style.css
@@ -129,3 +129,42 @@ ul{
 .swiper-pagination {
     position: initial;
 }
+
+/*Card*/
+.card{
+    margin: 1em;
+    background: var(--branco);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 10px;
+}
+.card-descricao{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0.5em;
+} 
+.card-botao{
+    display: flex;
+    justify-content: space-between;
+}
+.botoes{
+    display: flex;
+}
+.card-botao-item img{
+    padding-top: 5px;
+    padding-right: 3pxs;
+}
+.descricao-titulo{
+    color: var(--laranja);
+    font-weight: 600;
+}
+.descricao-titulo-livro{
+    color: #002F52;
+    font-size: 18px;
+    margin: 0.5em 0;
+}
+.descricao{
+    padding: 0.5em 0;
+}
+.descricao p{
+    font-size: 14px;
+}
