--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body{
 ul{
     margin: 0;
     list-style: none;
+    margin-block-end: 0;
+    margin-block-start: 0;
+    padding-inline-start: 0px;
 }
 .logo{
     padding-bottom: 10px;
@@ -151,7 +154,8 @@ ul{
 }
 .card-botao-item img{
     padding-top: 5px;
-    padding-right: 3pxs;
+    padding-right: 1em;
+    padding-left: 1em;
 }
 .descricao-titulo{
     color: var(--laranja);
@@ -163,8 +167,96 @@ ul{
     margin: 0.5em 0;
 }
 .descricao{
-    padding: 0.5em 0;
+    padding: 0.5em;
 }
 .descricao p{
     font-size: 14px;
+}
+.btn-ancora{
+    background-color: var(--laranja);
+    padding: 1em 2.2em;
+    margin: 1em; 
+    color: var(--branco);
+    font-weight: 700;
+    text-decoration: none;
+
+}
+/*Seção de visitados recentemente*/
+.topicos{
+    background: var(--azul-degrade);
+    text-align: center;
+
+}
+.topicos-titulo{
+    color: var(--branco);
+    font-weight: 300;
+    text-transform: uppercase;
+    margin-top: 1em;
+    padding-top: 1em;
+
+}
+.topicos-lista{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.topicos-items{
+    margin: 2em 0.5em;
+}
+.topicos-link{
+    color: var(--branco);
+    background-color: var(--laranja);
+    padding: 1em;
+    text-decoration: none;
+    border-radius: 3px;
+    font-weight: 700;
+
+}
+/*Seção contato e footer*/
+.contato{
+    background-color: var(--branco);
+    padding: 1em;
+
+}
+
+.contato h2,
+ .contato p{
+    background: var(--azul-degrade);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
+.contato h2{
+    font-size: 18px;
+    font-weight: 600;
+}
+
+.contato p{
+    font-weight: 400;
+    padding: 1em 0;
+}
+
+.contato input{
+    padding: 1em;
+    border: 1px solid #002F52;
+    border-radius: 15px;
+    width: 90%;
+    margin: auto;
+    color:#002F52;
+}
+.contato input::placeholder{
+    font-family: var(--fonte-principal);
+    color: #002F52;
+    background: url("imagens/email.svg") no-repeat;
+    padding-left: 2em;
+}
+.contato input:focus{
+    color:#002F52;
+}
+.rodape{
+    background-color: var(--branco);
+    padding: 1em;
+}
+.rodape h2{
+    color: #002F52;
 }
